--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /env
 
+/.idea/.gitignore
+/.idea/anilist.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
