--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/frontend/node_modules
+
