--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "classname": "0.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-router": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "resolve": "^1.22.0",
     "web-vitals": "^2.1.4"
   },
