--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "resolve": "^1.22.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
