--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "classname": "0.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
+    "react-animate-height": "^2.1.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
