--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,22 @@
 {
   "builds": [
     {
-      "src": "backend/backend/wsgi.py",
+      "src": "backend/manage.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "backend/manage.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "backend/backend/wsgi.py"
+      "dest": "frontend/$1"
     }
   ]
 }
