--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "classname": "0.0.0",
     "jwt-decode": "^3.1.2",
+    "lint": "^1.1.2",
     "react": "^18.0.0",
     "react-animate-height": "^2.1.2",
     "react-bootstrap": "^2.2.3",
@@ -16,7 +17,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.11.0",
     "react-router": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
     "resolve": "^1.22.0",
     "styled-components": "^5.3.5",
