--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,18 @@
 {
+  "builds": [
+    {
+      "src": "backend/backend/wsgi.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/manage.py"
+      "dest": "backend/backend/wsgi.py"
     },
     {
       "src": "/(.*)",
