--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.21.5",
     "react-router-dom": "^6.3.0"
   },
   "engines": {
