--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.11.0",
     "react-router": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "resolve": "^1.22.0",
     "styled-components": "^5.3.5",
@@ -51,8 +51,5 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.21.5",
     "react-router-dom": "^6.3.0"
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
