--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "backend/backend/wsgi.py",
+      "src": "backend/manage.py",
       "use": "@vercel/python"
     },
     {
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/backend/wsgi.py"
+      "dest": "backend/manage.py"
     },
     {
       "src": "/(.*)",
